# DazeAPI

./: .cursorignore  .dockerignore  AGENTS.md  Dockerfile  api_cleanup_report.md  docker-compose.yml  docker-compose_prod.yml  go.mod  go.sum  main.go  unused_backend_apis.md
agno_service/: Dockerfile  agent.py  main.py  pyproject.toml
common/: admin_permission.go  body_storage.go  constants.go  crypto.go  database.go  disk_cache.go  disk_cache_config.go  gin.go  go-channel.go  hash.go  init.go  ip.go  pprof.go  redis.go  str.go  topup-ratio.go  utils.go
constant/: context_key.go
controller/: billing.go  channel-billing.go  channel-test.go  channel.go  channel_upstream_update.go  clawd.go  codex_oauth.go  codex_usage.go  custom_oauth.go  group.go  image_proxy.go  log.go  misc.go  model.go  oauth.go  option.go  pricing.go  ratio_config.go  ratio_sync.go  relay.go  secure_verification.go  setup.go  token.go  token_test.go  topup.go  topup_alipay.go  topup_creem.go  topup_epay.go  twofa.go  user.go  wechat.go
dto/: channel_settings.go  openai_response.go  suno.go  task.go  user_settings.go  values.go
logger/: logger.go
middleware/: auth.go  distributor.go  i18n.go  rate-limit.go  recover.go  utils.go
model/: ability.go  channel.go  channel_cache.go  channel_clawd.go  channel_satisfy.go  channel_tune_event.go  custom_oauth_stub.go  flex_string.go  group_default.go  log.go  log_test.go  main.go  model_extra.go  model_meta.go  option.go  passkey_stub.go  pricing.go  redemption_stub.go  subscription_order_stub.go  task.go  task_cas_test.go  token.go  token_cache.go  (+6 more)
(+297 files in other folders)
