[project]
name = "clawd-agent-sidecar"
version = "0.1.0"
description = "Clawd agent sidecar for DazeAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "agno>=2.6.22",
    "openai>=2.44.0",
    "psycopg[binary]>=3.3.4",
    "lancedb>=0.20.0",
    "trafilatura>=2.0",
    "beautifulsoup4>=4.12",
]
